<resources>
    <string name="app_name">科创计划</string>
    <!-- 底部导航栏 -->
    <string name="fm_home">首页</string>
    <string name="fm_life">生活</string>
    <string name="fm_info">资讯</string>
    <string name="fm_my">我的</string>
    <!-- 通用 -->
    <string name="common_jump">跳过</string>
    <string name="common_sure">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_back">返回</string>
    <string name="common_complete">完成</string>
    <string name="nil"> </string>
    <!-- 网络 -->
    <string name="toast_double_click">两秒内再按一次退出</string>
    <string name="toast_click_exit">再按一次退出</string>
    <string name="label_current_network">当前网络信号较差</string>
    <string name="toast_please_check_net">请检查网络</string>
    <string name="toast_no_internet">当前无网络</string>
    <string name="toast_server_connection_failed">服务器连接失败</string>
    <string name="net_request_cancel">取消请求</string>
    <string name="txt_loading">加载中</string>
    <string name="label_china_mobile_communication_corp">中国移动</string>
    <string name="label_china_unicom">中国联通</string>
    <string name="label_china_telecommunications">中国电信</string>
    <!-- 注册登录 -->
    <string name="phone_number">手机号</string>
    <string name="captcha">验证码</string>
    <string name="password">密码</string>
    <string name="confirm">确认密码</string>
    <string name="submit">提交</string>
    <string name="username">用户名</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_card_number">请输入会员卡号</string>
    <string name="forgot_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="get_code">获取验证码</string>
    <string name="telephone_login">手机号快速登录</string>
    <string name="member_card_login">会员卡登录</string>
    <string name="third_pard_login">第三方快速登录</string>
    <string name="weibo">微博</string>
    <string name="wechat">微信</string>
    <string name="QQ">QQ</string>
    <string name="member_card">会员卡</string>
    <string name="login_success">登录成功</string>
    <!-- 推荐人 -->


    <string name="find_friends">发现附近聊友</string>
    <string name="pass">忽略</string>
    <string name="one_key_follow">一键关注</string>
    <string name="follow">关注</string>
    <string name="newest">最新动态</string>
    <string name="reference">推荐人</string>
    <string name="statements">我已阅读并同意</string>
    <string name="useragreement">《用户协议》</string>
    <string name="passwordtoast">6～12位(数字、母组)</string>
    <string name="referencetoast">推荐人手机号或代理商编号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_input_phone_num">请正确输入手机号</string>
    <string name="register_abandon">是否放弃注册</string>
    <string name="register_abandon_true">放弃</string>
    <string name="register_abandon_false">继续注册</string>
    <string name="register_input_phone_error">手机号输入有误</string>
    <string name="register_input_code_error">请输入六位验证码</string>
    <string name="register_input_password_error">密码需要包含数字和字母</string>
    <string name="register_input_password_error_count">密码需要大于六位</string>
    <string name="register_input_password_error_inconsistent">确认密码与原密码不符，请重新输入</string>
    <string name="register_smscode">验证码:</string>
    <string name="register_read_statements">请仔细阅读用户协议:</string>
    <string name="register_error_input">输入有误,请检查:</string>
    <string name="register_error_input_phone">请正确输入手机号</string>
    <!-- 设置 -->
    <string name="title_setting">设置</string>
    <string name="pwd_reset">密码修改</string>
    <string name="lable_about">关于我们</string>
    <string name="label_old_pwd">原密码</string>
    <string name="hint_input_old_pwd">请输入原密码</string>
    <string name="label_new_pwd">新密码</string>
    <string name="et_new_pwd">6～12位(数字、字母组合)</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="label_confirm_pwd">确认密码</string>
    <string name="txt_pwd_format_uncorrect">密码格式不正确，请重新输入</string>
    <string name="btn_confirm_pwd">确认修改</string>
    <string name="txt_pwd_not_same">确认密码与原密码不符，请重新输入</string>
    <string name="txt_modify_success">修改成功！</string>
    <string name="txt_modify_confirm">确认</string>
    <string name="txt_version_num">版本号：</string>
    <string name="txt_server_right">版权所有：</string>
    <string name="txt_customer_num">客服电话：</string>
    <string name="txt_official_web">公司官网：</string>
    <string name="txt_user_agreement">用户协议：</string>
    <string name="toast_input_old_pwd">请输入原密码</string>
    <string name="toast_input_new_pwd">请输入新密码</string>
    <string name="toast_input_new_pwd_again">请再次输入新密码</string>
    <string name="toast_input_new_pwd_tip">请输入6～12位(数字、字母组合)密码</string>
    <string name="toast_input_not_same">两次输入的密码不一致，请重新输入！</string>

    <!-- 帮助中心 -->
    <string name="title_help_center">帮助中心</string>
    <string name="label_online_service">在线客服</string>
    <string name="label_common_problem">常见问题</string>

    <!-- 手势密码 -->
    <string name="gesture_password">手势密码</string>
    <string name="gesture_your_password">请输入已经设置过的密码</string>
    <string name="gesture_will_password">请输入要设置的密码</string>
    <string name="gesture_password_error">密码错误，还可以输入</string>
    <string name="gesture_password_error_time">次</string>
    <string name="gesture_password_cont_less">密码不能少于</string>
    <string name="gesture_password_cont_less_point">个点</string>
    <string name="gesture_input_password_again">请再次输入密码</string>
    <string name="gesture_input_password_new">请输入新密码</string>
    <string name="gesture_input_password_error">两次输入的密码不一致</string>
    <string name="gesture_input_password_look">密码错误次数超过限制，不能再输入</string>
    <string name="gesture_set_password_success">密码设置成功</string>
    <string name="gesture_modify_password_success">密码修改成功</string>
    <string name="gesture_check_password_success">密码正确</string>
    <string name="gesture_clean_password_success">密码已经清除</string>
    <string name="gesture_clean_password">清除密码</string>
    <string name="gesture_modify_password">修改密码</string>
    <string name="gesture_set_password">设置密码</string>
    <string name="gesture_check_password">验证密码</string>
    <string name="gesture_set_password_first">请先设置密码</string>
</resources>
