<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFFFFFF"
    tools:context="kechuang.mr.com.kcjh.activity.commend.CommendFriendActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens48dp"
        android:background="@color/colorF51C1C">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/find_friends"
            android:textColor="@color/colorFFFFFF"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingRight="@dimen/dimens15dp"
            android:text="@string/pass"
            android:textColor="@color/colorFFFFFF" />
    </RelativeLayout>
    <Button
        android:id="@+id/btn_follow"
        style="@style/CommonBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dimens40dp"
        android:layout_marginRight="@dimen/dimens40dp"
        android:text="@string/one_key_follow" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_follow"
        android:layout_below="@id/rl_title"
        android:background="#fff"
        android:overScrollMode="never" />



</RelativeLayout>
