<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dimens20dp">

    <com.smk.card.pay.view.CircularImage
        android:id="@+id/img_header"
        android:layout_width="@dimen/dimens32dp"
        android:layout_height="@dimen/dimens32dp"
        android:background="@drawable/nav_head"
        android:scaleType="fitCenter"

        />

    <TextView
        android:id="@+id/tv_male"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimens32dp"
        android:layout_toEndOf="@+id/img_header"
        android:drawablePadding="@dimen/dimens5dp"
        android:drawableRight="@drawable/ic_male_green_2x"
        android:gravity="center"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_female"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimens32dp"
        android:layout_toEndOf="@+id/img_header"
        android:drawablePadding="@dimen/dimens5dp"
        android:drawableRight="@drawable/ic_female_pink_2x"
        android:gravity="center"
        android:text="@string/app_name"
        android:visibility="gone" />

    <Button
        style="@style/CommonBtn"
        android:layout_width="@dimen/dimens45dp"
        android:layout_height="@dimen/dimens20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dimens50dp"
        android:layout_marginTop="@dimen/dimens10dp"
        android:text="@string/follow" />

    <TextView
        android:id="@+id/tv_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_header"
        android:layout_marginTop="@dimen/dimens10dp"
        android:text="@string/newest" />

    <ImageView
        android:id="@+id/iv_main_photo"
        android:layout_width="@dimen/dimens65dp"
        android:layout_height="@dimen/dimens65dp"
        android:layout_below="@id/tv_new"
        android:layout_marginTop="@dimen/dimens10dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:ellipsize="end"
        android:maxEms="18"
        android:singleLine="true"
        android:layout_marginLeft="@dimen/dimens15dp"
        android:layout_alignTop="@+id/iv_main_photo"
        android:layout_toEndOf="@+id/iv_main_photo" />
    <TextView
        android:id="@+id/tv_introduce"
        android:layout_below="@id/tv_title"
        android:layout_toEndOf="@+id/iv_main_photo"
        android:layout_marginLeft="@dimen/dimens15dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>